feat: dont compact screenshots
closes #21